profiling-using-exp-runner/backup_FINAL_RESULTS/mergesort_experiment/run_0_repetition_0/energibridge.log
sampling interval: 200, target function: merge_sort, input size: (10, 13, 2, 11, 6, 15, 16, 12, 5, 9, 14, 20, 19, 3, 1, 17, 4, 7, 8, 18)
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.mergesort as module; module.merge_sort((10, 13, 2, 11, 6, 15, 16, 12, 5, 9, 14, 20, 19, 3, 1, 17, 4, 7, 8, 18))
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 10.059063529968263 for 0.22841522 sec of execution.
